--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,13 @@ spring:
     password: 123456
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**Mapper.xml
+
+sa-token:
+  token-name: token
+  timeout: 86400
+  active-timeout: -1
+  is-concurrent: true
+  is-share: true
+  token-style: uuid
+  is-log: true
+
