--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,3 +42,18 @@ file:
   upload:
     path:
       C:/files/audio/
+
+api-key:
+  3haSXBnr6Xk5mQLxC3uhfGKY
+
+secret-key:
+  tpAQaHaZoL0BwJa9ZXP9Aw6gmnZlZlnZ
+
+cuid:
+  vUEHFxL4Hg3rFgqvuSFTx29frx7iZqLO
+
+ffmpeg:
+  C:/Program Files (x86)/ffmpeg/ffmpeg-6.1.1-full_build/bin/ffmpeg.exe
+
+ffprobe:
+  C:/Program Files (x86)/ffmpeg/ffmpeg-6.1.1-full_build/bin/ffprobe.exe
