--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,11 @@
             <artifactId>jakarta.json-api</artifactId>
             <version>2.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <version>4.0.2</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
